Fixed mobile scrollbar issues.

--- a/src/scss/base/containers.scss
+++ b/src/scss/base/containers.scss
@@ -1,9 +1,8 @@
 html,
 body {
+    width: 100%;
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
     position: relative;
 }
 
